@@ -91,7 +91,8 @@ void av_register_all(void)
     if (!ENABLE_NUT_DEMUXER) REGISTER_DEMUXER (LIBNUT, libnut);
     if (!ENABLE_NUT_MUXER)   REGISTER_MUXER   (LIBNUT, libnut);
     REGISTER_MUXDEMUX(M4V, m4v);
-    REGISTER_DEMUXER (MATROSKA, matroska);
+    REGISTER_MUXDEMUX(MATROSKA, matroska);
+    REGISTER_MUXER   (MATROSKA_AUDIO, matroska_audio);
     REGISTER_MUXDEMUX(MJPEG, mjpeg);
     REGISTER_DEMUXER (MM, mm);
     REGISTER_MUXDEMUX(MMF, mmf);
