@@ -92,6 +92,7 @@ version <next>
 - OS/2 support removed
 - AC-3 decoder
 - NUT muxer (since r10052)
+- Matroska muxer
 
 version 0.4.9-pre1:
 
